--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -8,7 +8,8 @@
     "jquery": "~1.11.1",
     "lodash": "~3.5.0",
     "angular-ui-router": "~0.2.13",
-    "angular-messages": "~1.3.14"
+    "angular-messages": "~1.3.14",
+    "holderjs": "~2.5.2"
   },
   "resolutions": {
     "angular": "~1.3.14",
