--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -9,7 +9,9 @@
     "lodash": "~3.5.0",
     "angular-ui-router": "~0.2.13",
     "angular-messages": "~1.3.14",
-    "holderjs": "~2.5.2"
+    "holderjs": "~2.5.2",
+    "angular-holderjs": "~1.1.0",
+    "textAngular": "~1.3.11"
   },
   "resolutions": {
     "angular": "~1.3.14",
