--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -11,7 +11,8 @@
     "angular-messages": "~1.3.14",
     "holderjs": "~2.5.2",
     "angular-holderjs": "~1.1.0",
-    "textAngular": "~1.3.11"
+    "textAngular": "~1.3.11",
+    "Sortable": "~1.1.1"
   },
   "resolutions": {
     "angular": "~1.3.14",
