--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -17,5 +17,13 @@
   "resolutions": {
     "angular": "~1.3.14",
     "jquery": "~1.11.1"
+  },
+  "overrides": {
+    "Sortable": {
+       "main": [
+        "Sortable.js",
+        "ng-sortable.js"
+       ]
+    }
   }
 }
