--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,9 @@
     "cors": "^2.5.3",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
+    "lodash": "^3.5.0",
     "method-override": "~1.0.0",
-    "mongoose": "~3.8.8"
+    "mongoose": "^3.8.25"
   },
   "engines": {
     "node": ">=0.10.0"
